@@ -1,3 +1,7 @@
+2005-01-25  Maynard Johnson <maynardj@us.ibm.com>
+
+	* doc/oprofile.xml: Add PowerPC 64-bit processor support information
+
 2005-01-24  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libutil++/op_bfd.cpp: always initialize op_bfd_symbol:symb_hidden
